fix(docs): Fix collapsible weird spacing when having a pre inside it

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -137,7 +137,7 @@
   --tw-prose-td-borders: var(--color-border) !important;
 
   pre {
-    @apply rounded-xl;
+    @apply rounded-xl my-0;
   }
 }
 
